--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-**/*.iml
 **/.gradle
 **/local.properties
 **/.idea/workspace.xml
@@ -9,3 +8,4 @@
 **/.externalNativeBuild
 **/misc.xml
 **/gradle.xml
+**/vcs.xml
