--- a/app/app-module/build.gradle
+++ b/app/app-module/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.0'
     testCompile 'junit:junit:4.12'
     compile files('libs/common.jar')
+    compile files('C:/Users/Andre/Softwaretest/psychic-giggle/app/lib/common.jar')
 }
