--- a/app/common/build.gradle
+++ b/app/common/build.gradle
@@ -26,10 +26,10 @@ task createJar(type: Jar) {
 
 // this task copies the generated common.jar into the root of the softwareprojekt
 task copyJarToRoot(type: Copy) {
-    dependsOn createJar
+
     from 'build/libs/common.jar'
     into "../../"
 }
 
 // this task creates the jar and copies it to the project root
-task provideJar (dependsOn: [copyJarToRoot])
+task provideJar (dependsOn: [clean, createJar, copyJarToRoot])
