working on options

--- a/app/app-module/src/main/AndroidManifest.xml
+++ b/app/app-module/src/main/AndroidManifest.xml
@@ -19,5 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".SendActivity" />
+        <activity android:name=".OptionsActivity"></activity>
     </application>
+
 </manifest>
