--- a/app/app-module/src/main/AndroidManifest.xml
+++ b/app/app-module/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DiscoveryActivity">
+        <activity android:name=".activities.DiscoveryActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,9 +19,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SendActivity"
+            android:name=".activities.send.SendActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".OptionsActivity" />
+        <activity android:name=".activities.OptionsActivity" />
     </application>
 
 </manifest>
