tested, fixed multi client merge; single player still works

--- a/keys.properties
+++ b/keys.properties
@@ -1,32 +1,32 @@
-BUTTON_A_0=a
-BUTTON_B_0=b
-BUTTON_X_0=x
-BUTTON_Y_0=y
-BUTTON_SELECT_0=
-BUTTON_START_0=
-BUTTON_R_0=
-BUTTON_L_0=
-BUTTON_A_1=
-BUTTON_B_1=
-BUTTON_X_1=
-BUTTON_Y_1=
-BUTTON_SELECT_1=
-BUTTON_START_1=
-BUTTON_R_1=
-BUTTON_L_1=
-BUTTON_A_2=
-BUTTON_B_2=
-BUTTON_X_2=
-BUTTON_Y_2=
-BUTTON_SELECT_2=
-BUTTON_START_2=
-BUTTON_R_2=
-BUTTON_L_2=
-BUTTON_A_3=
-BUTTON_B_3=
-BUTTON_X_3=
-BUTTON_Y_3=
-BUTTON_SELECT_3=
-BUTTON_START_3=
-BUTTON_R_3=
-BUTTON_L_3=
+BUTTON_A_0=VK_X
+BUTTON_B_0=VK_Y
+BUTTON_X_0=VK_S
+BUTTON_Y_0=VK_A
+BUTTON_SELECT_0=VK_SHIFT
+BUTTON_START_0=VK_ENTER
+BUTTON_R_0=VK_C
+BUTTON_L_0=VK_D
+BUTTON_A_1=VK_G
+BUTTON_B_1=VK_G
+BUTTON_X_1=VK_G
+BUTTON_Y_1=VK_G
+BUTTON_SELECT_1=VK_G
+BUTTON_START_1=VK_G
+BUTTON_R_1=VK_G
+BUTTON_L_1=VK_G
+BUTTON_A_2=VK_G
+BUTTON_B_2=VK_G
+BUTTON_X_2=VK_G
+BUTTON_Y_2=VK_G
+BUTTON_SELECT_2=VK_G
+BUTTON_START_2=VK_G
+BUTTON_R_2=VK_G
+BUTTON_L_2=VK_G
+BUTTON_A_3=VK_G
+BUTTON_B_3=VK_G
+BUTTON_X_3=VK_G
+BUTTON_Y_3=VK_G
+BUTTON_SELECT_3=VK_G
+BUTTON_START_3=VK_G
+BUTTON_R_3=VK_G
+BUTTON_L_3=VK_G
