added direction keys to button config. ugly as of now, but should work when the left etc keys are configured in keys.properties

--- a/keys.properties
+++ b/keys.properties
@@ -6,14 +6,14 @@ BUTTON_SELECT_0=VK_SHIFT
 BUTTON_START_0=VK_ENTER
 BUTTON_R_0=VK_C
 BUTTON_L_0=VK_D
-BUTTON_A_1=VK_G
-BUTTON_B_1=VK_G
-BUTTON_X_1=VK_G
-BUTTON_Y_1=VK_G
-BUTTON_SELECT_1=VK_G
-BUTTON_START_1=VK_G
-BUTTON_R_1=VK_G
-BUTTON_L_1=VK_G
+BUTTON_A_1=VK_Q
+BUTTON_B_1=VK_W
+BUTTON_X_1=VK_E
+BUTTON_Y_1=VK_R
+BUTTON_SELECT_1=VK_T
+BUTTON_START_1=VK_Z
+BUTTON_R_1=VK_U
+BUTTON_L_1=VK_I
 BUTTON_A_2=VK_G
 BUTTON_B_2=VK_G
 BUTTON_X_2=VK_G
