--- a/keys.properties
+++ b/keys.properties
@@ -6,6 +6,10 @@ BUTTON_SELECT_0=VK_SHIFT
 BUTTON_START_0=VK_ENTER
 BUTTON_R_0=VK_C
 BUTTON_L_0=VK_D
+BUTTON_LEFT_0=VK_LEFT
+BUTTON_UP_0=VK_UP
+BUTTON_RIGHT_0=VK_RIGHT
+BUTTON_DOWN_0=VK_DOWN
 BUTTON_A_1=VK_Q
 BUTTON_B_1=VK_W
 BUTTON_X_1=VK_E
@@ -14,6 +18,10 @@ BUTTON_SELECT_1=VK_T
 BUTTON_START_1=VK_Z
 BUTTON_R_1=VK_U
 BUTTON_L_1=VK_I
+BUTTON_LEFT_1=VK_G
+BUTTON_UP_1=VK_G
+BUTTON_RIGHT_1=VK_G
+BUTTON_DOWN_1=VK_G
 BUTTON_A_2=VK_G
 BUTTON_B_2=VK_G
 BUTTON_X_2=VK_G
@@ -22,6 +30,10 @@ BUTTON_SELECT_2=VK_G
 BUTTON_START_2=VK_G
 BUTTON_R_2=VK_G
 BUTTON_L_2=VK_G
+BUTTON_LEFT_2=VK_G
+BUTTON_UP_2=VK_G
+BUTTON_RIGHT_2=VK_G
+BUTTON_DOWN_2=VK_G
 BUTTON_A_3=VK_G
 BUTTON_B_3=VK_G
 BUTTON_X_3=VK_G
@@ -30,3 +42,7 @@ BUTTON_SELECT_3=VK_G
 BUTTON_START_3=VK_G
 BUTTON_R_3=VK_G
 BUTTON_L_3=VK_G
+BUTTON_LEFT_3=VK_G
+BUTTON_UP_3=VK_G
+BUTTON_RIGHT_3=VK_G
+BUTTON_DOWN_3=VK_G
