--- a/keys.properties
+++ b/keys.properties
@@ -10,18 +10,18 @@ BUTTON_LEFT_0=VK_LEFT
 BUTTON_UP_0=VK_UP
 BUTTON_RIGHT_0=VK_RIGHT
 BUTTON_DOWN_0=VK_DOWN
-BUTTON_A_1=VK_Q
-BUTTON_B_1=VK_W
-BUTTON_X_1=VK_E
-BUTTON_Y_1=VK_R
-BUTTON_SELECT_1=VK_T
-BUTTON_START_1=VK_Z
-BUTTON_R_1=VK_U
-BUTTON_L_1=VK_I
-BUTTON_LEFT_1=VK_G
-BUTTON_UP_1=VK_G
-BUTTON_RIGHT_1=VK_G
-BUTTON_DOWN_1=VK_G
+BUTTON_A_1=VK_H
+BUTTON_B_1=VK_G
+BUTTON_X_1=VK_Z
+BUTTON_Y_1=VK_T
+BUTTON_SELECT_1=VK_P
+BUTTON_START_1=VK_O
+BUTTON_R_1=VK_M
+BUTTON_L_1=VK_N
+BUTTON_LEFT_1=VK_J
+BUTTON_UP_1=VK_I
+BUTTON_RIGHT_1=VK_L
+BUTTON_DOWN_1=VK_K
 BUTTON_A_2=VK_G
 BUTTON_B_2=VK_G
 BUTTON_X_2=VK_G
