debugging multiclient stuff

--- a/keys.properties
+++ b/keys.properties
@@ -10,18 +10,20 @@ BUTTON_LEFT_0=VK_LEFT
 BUTTON_UP_0=VK_UP
 BUTTON_RIGHT_0=VK_RIGHT
 BUTTON_DOWN_0=VK_DOWN
-BUTTON_A_1=VK_Q
-BUTTON_B_1=VK_W
-BUTTON_X_1=VK_E
-BUTTON_Y_1=VK_R
-BUTTON_SELECT_1=VK_T
-BUTTON_START_1=VK_Z
-BUTTON_R_1=VK_U
-BUTTON_L_1=VK_I
-BUTTON_LEFT_1=VK_G
-BUTTON_UP_1=VK_G
-BUTTON_RIGHT_1=VK_G
-BUTTON_DOWN_1=VK_G
+
+BUTTON_A_1=VK_U
+BUTTON_B_1=VK_I
+BUTTON_X_1=VK_O
+BUTTON_Y_1=VK_P
+BUTTON_SELECT_1=VK_Z
+BUTTON_START_1=VK_T
+BUTTON_R_1=VK_G
+BUTTON_L_1=VK_G
+BUTTON_LEFT_1=VK_E
+BUTTON_UP_1=VK_Q
+BUTTON_RIGHT_1=VK_R
+BUTTON_DOWN_1=VK_W
+
 BUTTON_A_2=VK_G
 BUTTON_B_2=VK_G
 BUTTON_X_2=VK_G
@@ -34,6 +36,7 @@ BUTTON_LEFT_2=VK_G
 BUTTON_UP_2=VK_G
 BUTTON_RIGHT_2=VK_G
 BUTTON_DOWN_2=VK_G
+
 BUTTON_A_3=VK_G
 BUTTON_B_3=VK_G
 BUTTON_X_3=VK_G
