keys.properties and snes9x.conf should now be really set for Player 1 and 2
Last time it apparently didn't save the snes9x.conf file when I set the controls via emulator for some reason ...
Should work now properly

--- a/snes9x.conf
+++ b/snes9x.conf
@@ -1,5 +1,5 @@
 # Config file output by snes9x
-# Tue Jan  3 18:31:16 2017
+# Tue Jan  3 20:46:22 2017
 
 [ROM]
 Cheat = TRUE   # true to allow enabled cheats to be applied
@@ -74,7 +74,7 @@ DisplayFrameCount = TRUE   # true to show the frame count when a movie is playin
     Window:Height               = 448    # 224=1x, 448=2x, 672=3x,  896=4x, etc. (usually)
     Window:Left                 = 0      # in pixels from left edge of screen
     Window:Top                  = 0      # in pixels from top edge of screen
-    Window:Maximized            = FALSE
+    Window:Maximized            = TRUE
    Stretch:Enabled              = TRUE   # true to stretch the game image to fill the window or screen
    Stretch:MaintainAspectRatio  = TRUE   # prevents stretching from changing the aspect ratio
    Stretch:AspectRatioBaseWidth = 256    # base width for aspect ratio calculation (AR=AspectRatioBaseWidth/224), default is 256 - set to 299 for 4:3 aspect ratio
@@ -170,14 +170,14 @@ AllowLeftRight = FALSE  # true to allow left+right and up+down
      Joypad1:Down       = Down
      Joypad1:Left       = Left
      Joypad1:Right      = Right
-     Joypad1:A          = V
-     Joypad1:B          = C
-     Joypad1:Y          = X
-     Joypad1:X          = D
-     Joypad1:L          = A
-     Joypad1:R          = S
-     Joypad1:Start      = Space
-     Joypad1:Select     = Enter
+     Joypad1:A          = X
+     Joypad1:B          = Y
+     Joypad1:Y          = A
+     Joypad1:X          = S
+     Joypad1:L          = D
+     Joypad1:R          = C
+     Joypad1:Start      = Enter
+     Joypad1:Select     = Shift
      Joypad1:Left+Up    = Unassigned
      Joypad1:Right+Up   = Unassigned
      Joypad1:Right+Down = Unassigned
@@ -193,12 +193,12 @@ Joypad1Turbo:ClearAll   = Unassigned
      Joypad2:Right      = L
      Joypad2:A          = H
      Joypad2:B          = G
-     Joypad2:Y          = F
-     Joypad2:X          = T
-     Joypad2:L          = Y
-     Joypad2:R          = U
-     Joypad2:Start      = P
-     Joypad2:Select     = O
+     Joypad2:Y          = T
+     Joypad2:X          = Z
+     Joypad2:L          = O
+     Joypad2:R          = P
+     Joypad2:Start      = N
+     Joypad2:Select     = M
      Joypad2:Left+Up    = Unassigned
      Joypad2:Right+Up   = Unassigned
      Joypad2:Right+Down = Unassigned
