--- a/keys.properties
+++ b/keys.properties
@@ -15,10 +15,10 @@ BUTTON_A_1=VK_H
 BUTTON_B_1=VK_G
 BUTTON_X_1=VK_Z
 BUTTON_Y_1=VK_T
-BUTTON_SELECT_1=VK_P
-BUTTON_START_1=VK_O
-BUTTON_R_1=VK_M
-BUTTON_L_1=VK_N
+BUTTON_SELECT_1=VK_M
+BUTTON_START_1=VK_N
+BUTTON_R_1=VK_P
+BUTTON_L_1=VK_O
 BUTTON_LEFT_1=VK_J
 BUTTON_UP_1=VK_I
 BUTTON_RIGHT_1=VK_L
