added todo generated by brother, implemented some of the fixes already

--- a/snes9x.conf
+++ b/snes9x.conf
@@ -126,7 +126,7 @@ Dir:SRAM         = .\Saves                                           # directory
 Dir:Patches      = .\Cheats                                          # directory in which ROM patches (.ips files) and cheats (.cht files) will be looked for
 Dir:Bios         = .\BIOS                                            # directory where BIOS files (such as "BS-X.bios") will be located
 Dir:Lock         = FALSE                                             # true to prevent Snes9x from changing configured directories when you browse to a new location
-Rom:RecentGame1  = C:\Users\PC\Desktop\Emulatoren\SNESX9\Roms\Super Mariokart (E).smc
+Rom:RecentGame1  = 
 Rom:RecentGame2  = 
 Rom:RecentGame3  = 
 Rom:RecentGame4  = 
